@@ -38,6 +38,11 @@ Changes in v0.7 (2010-01-30):<br>
  <li> Support background fill for angled text. </li>
 </ul>
 
+Incompatible changes in v0.7:<br>
+<ul>
+ <li> Changed height metric in getFontMetric to measure full bbox for all fonts. </li>
+</ul>
+
 v0.6 was never released<br>
 
 Changes in v0.5 (2009-01-04):<br>
